# taghvim

./: .env.example  .gitignore  README.md  eslint.config.js  package-lock.json  package.json  render.yaml  tsconfig.json  vercel.json  vite.config.ts
api/: auth.js  blob-upload.js  monitoring-collect.js  reminders-process.js  workspace.js  workspace.ts
backend/: .env.example  README.md  package.json  tsconfig.json
backend/src/: server.ts
database/postgres/: 001_unified_schema.sql
docs/: ARCHITECTURE.md  AUTHENTICATION.md  BACKUP_AND_DISASTER_RECOVERY.md  DATABASE.md  DEPLOYMENT.md  IMPLEMENTATION_PLAN.md  INTEGRATION_AUDIT.md  OBSERVABILITY.md  PERFORMANCE_AUDIT_AND_CAPACITY.md  QUALITY_AUDIT.md  README.md  SECURITY_AUDIT.md  UI_UX_FINAL_AUDIT.md
docs/admins/: admin-guide.md
docs/api/: overview.md
docs/architecture/: database.md  system-overview.md
docs/deployment/: deployment-and-release.md
docs/development/: adding-a-monitoring-connector.md  environment-variables.md  local-setup.md  testing.md
docs/handover/: acceptance-report.md  handover-checklist.md  service-inventory.md
docs/operations/: backup-and-restore.md  observability-and-health.md  runbooks.md  troubleshooting.md
docs/product/: limitations.md  (+2 more)
frontend/: index.html  package.json  tsconfig.app.json  vite.config.ts  vitest.config.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 001_initial.sql  002_chat.sql  003_notifications.sql  004_monitoring.sql
src-tauri/src/: lib.rs  main.rs
src-tauri/wix/: en-US.wxl
(+113 files in other folders)
